# Student-and-Invigilator-Provisions-Project

./: .gitignore  Makefile  README.md  build_all.sh  nixpacks.toml  prepare-environment  refresh-environment  run_all.sh
services/django/lithium/: .coveragerc  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt
services/django/lithium/accounts/: adapters.py  admin.py  api.py  authentication.py  forms.py  models.py  tests.py  tests_ext.py  tests_validators.py  validators.py
services/django/lithium/accounts/migrations/: 0002_create_default_admin.py  0003_customuser_phone.py  0004_customuser_avatar.py  0005_usersession.py  0006_customuser_senior_admin.py
services/django/lithium/django_project/: settings.py  urls.py
services/django/lithium/lithium.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/django/lithium/pages/: tests.py  urls.py  views.py
services/django/lithium/pages/migrations/: 0001_initial.py
services/django/lithium/scripts/: create-timetabling-app.sh  manage.sh  run-dev-with-postgres.sh
services/django/lithium/tests/: __init__.py
services/django/lithium/tests/django/: test_announcements_api.py  test_api_bulk_delete.py  test_api_crud.py  test_api_notifications.py  test_api_serializers_views.py  test_api_views.py  test_api_views_permissions.py  test_auth_api.py  test_diets_api.py  test_excel_parser_errors.py  test_file_classifier_and_venue_parser.py  (+13 more)
services/django/lithium/timetabling_system/: admin.py  apps.py  constants.py  models.py  signals.py  tests.py  urls.py  views.py
(+146 files in other folders)
